# py-utils

./: .coveragerc  .flake8  .isort.cfg  .pylintrc  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py  version.txt
e2fyi/: __init__.py
e2fyi/utils/aws/: __init__.py  compat.py  s3.py  s3_resource.py  s3_resource_test.py  s3_stream.py  s3_stream_test.py  s3_test.py
e2fyi/utils/core/: __init__.py  http.py  http_test.py  maybe.py  maybe_test.py  results.py  results_test.py
rst/: conf.py  index.rst
