[tool.poetry]
name = "e2fyi-utils"
version = "0.3.0-rc-1"
description = "General utils for interacting with aws resources."
authors = ["eterna2 <eterna2@hotmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    {include = "e2fyi"}
]

[tool.poetry.dependencies]
python = ">=3.6.1,<4"
boto3 = ">=1.9"
python-dateutil = ">=2.1,<2.8.1"
typing-extensions = "*"
joblib = "*"
pandas = {version = "*", optional = true}
python-magic = {version = "0.4.*", markers = "sys_platform == 'linux'"}
python-magic-bin = {version = "0.4.*", markers = "sys_platform == 'darwin' or sys_platform == 'windows'"}
pydantic = ">=0.30"
toml = "^0.10.1"
requests = "^2.24.0"
requests-toolbelt = "^0.9.1"

[tool.poetry.extras]
pandas = ["pandas"]
all = ["pandas"]

[tool.poetry.dev-dependencies]
black = {version = "19.10b0", allow-prereleases = true, python = "^3.6", markers = "platform_python_implementation == 'CPython'"}
mypy = "^0.782"
flake8 = "^3.8.3"
pylint = "^2.6.0"
bandit = "^1.6.2"
flake8-isort = "^4.0.0"
flake8-comprehensions = "^3.2.3"
sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"
sphinx-autoapi = "^1.5.0"
coverage = "^5.3"
coveralls = "^2.1.2"
m2r2 = "^0.2.5"
requests_mock = "^1.8.0"
pytest = "^6.1.1"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
